# tennisbot

./: .gitignore  CLI_main.py  LICENSE  README-zh.md  README.md  bot_config.ini  check_crlf.py  classes.py  main.py  pyproject.toml  requirements.txt  start.bat  start_cli.bat  start_webui.bat  test.py  test_sentence.py  version_log.txt
agents/: agent.json  agent.md  main_agent.json  main_agent.md
data/: session.db  session.db-shm  session.db-wal  setting.json  tennisbot_session.db  tennisbot_session.db-shm  tennisbot_session.db-wal
data/sessions/: 0.db  0.db-shm  0.db-wal  1.db  1.db-shm  1.db-wal  (+1 more)
files/: bot_config_example.ini  emojis.json  schedule.ini  welcome.txt
functions/: chat.py  evaluate.py  execute.py  function_list.py  help.py  keyboard.py  mouse.py  raiseerror.py  screenshot.py  setting.py  speak.py  zchat_expensive.py
mdcb/: en-US-conv.json  en-US-functions.txt  en-US-system.txt  zh-CN-conv.json  zh-CN-functions.txt  zh-CN-system.txt
src/: CLI_run_session.py  agent.py  globals.py  jsonl_session.py  load_agent.py  logger.py  run.py  run_session.py  schedule.json  session_archive.py  session_history.py  sessions_index.py  setting.json  settings.py  stt.py  tts.py
tests/: test_agent.py  test_tools_fs.py  test_tools_patch.py  test_tools_shell.py
util/: config.py  func_chat_log.py  func_email.py  func_file.py  functions.py  get_message.py  info_process.py  log.py  mdcb.py  on_message.py  schedules.py  send_message.py  set.py
web/: README.md
z/: dev_history.md  dev_thoughts.md  export_session.py  session_export.json  session_export_1.json  z.py
(+87 files in other folders)
